# sqlgpt-parser

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  __init__.py  pyproject.toml
docs/docs-ch/: Parser Module Development Guide.md  SQL Parser 开发指南.md
docs/docs-en/: Parser Module Development Guide.md  SQL Parser Development Guide.md
sqlgpt_parser/: __init__.py
sqlgpt_parser/format/: formatter.py
sqlgpt_parser/parser/: parser_utils.py
sqlgpt_parser/parser/mysql_parser/: lexer.py  parser.py  reserved.py
sqlgpt_parser/parser/oceanbase_parser/: lexer.py  parser.py  reserved.py
sqlgpt_parser/parser/odps_parser/: lexer.py  parser.py  reserved.py
sqlgpt_parser/parser/tree/: expression.py  field_type.py  index_type.py  visitor.py  window.py
sqlgpt_parser/sql_parser/: __init__.py  parser_utils.py
sqlgpt_parser/sql_parser/mysql_parser/: lexer.py  parser.py
sqlgpt_parser/sql_parser/oceanbase_parser/: lexer.py  parser.py  reserved.py
sqlgpt_parser/sql_parser/odps_parser/: lexer.py  parser.py
src/sql_parser/: __init__.py  parser_utils.py
src/sql_parser.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/sql_parser/format/: formatter.py
src/sql_parser/mysql_parser/: lexer.py  parser.py  reserved.py
src/sql_parser/oceanbase_parser/: lexer.py  parser.py  reserved.py
src/sql_parser/odps_parser/: lexer.py  parser.py  reserved.py
src/sql_parser/tree/: expression.py  index_type.py  literal.py  visitor.py
src/sqlgpt_parser.egg-info/: PKG-INFO  SOURCES.txt
test/format/: test_sql_formatter.py
test/parser/: test_parser_ddl.py  test_parser_dml.py  test_parser_dql.py
