[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "sqlgpt-parser"
version = "0.0.1a2"
authors = [
  { name="luliwjc", email="chenxiaoxi_wjc@163.com" },
  { name="Ifffff", email="tingkai.ztk@antgroup.com" },
  { name="tomato", email="1083369179@qq.com" },
]

description = "A sql parser which support mysql, oceanbase and odps"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

dependencies = [
    "ply == 3.11",
]

[project.urls]
"Homepage" = "https://github.com/eosphoros-ai/sqlgpt-parser"
"Bug Tracker" = "https://github.com/eosphoros-ai/sqlgpt-parser/issues"

[tool.ruff]
    select = ["F"]
    # Allow autofix for all enabled rules (when `--fix`) is provided.
    fixable = ["ALL"]
    line-length=120

[tool.black]
    skip-string-normalization = 1
    force-exclude = '''
    src/sql_parser/mysql_parser/parser_table.py
    | src/sql_parser/oceanbase_parser/parser_table.py
    | src/sql_parser/odps_parser/parser_table.py
    '''